wip: pluginize-slides-workflow stuck when check docker build
